--- a/O-нотация. Простые структуры данных/Лабораторная 1/Очередь/task-info.yaml
+++ b/O-нотация. Простые структуры данных/Лабораторная 1/Очередь/task-info.yaml
@@ -3,65 +3,65 @@ files:
 - name: task.py
   visible: true
   placeholders:
-  - offset: 204
-    length: 35
+  - offset: 201
+    length: 51
     placeholder_text: "...  # TODO инициализировать список"
     initial_state:
       length: 35
       offset: 204
     initialized_from_dependency: false
-    selected: false
-    status: Failed
+    selected: true
+    status: Solved
     encrypted_possible_answer: '...'
-  - offset: 418
-    length: 37
+  - offset: 439
+    length: 57
     placeholder_text: "...  # TODO реализовать метод enqueue"
     initial_state:
       length: 37
       offset: 418
     initialized_from_dependency: false
-    selected: false
-    status: Failed
+    selected: true
+    status: Solved
     encrypted_possible_answer: '...'
-  - offset: 679
-    length: 37
+  - offset: 728
+    length: 138
     placeholder_text: "...  # TODO реализовать метод dequeue"
     initial_state:
       length: 37
       offset: 679
     initialized_from_dependency: false
     selected: true
-    status: Failed
+    status: Solved
     encrypted_possible_answer: '...'
-  - offset: 1198
-    length: 34
+  - offset: 1402
+    length: 284
     placeholder_text: "...  # TODO реализовать метод peek"
     initial_state:
       length: 34
       offset: 1198
     initialized_from_dependency: false
-    selected: false
-    status: Failed
+    selected: true
+    status: Solved
     encrypted_possible_answer: '...'
-  - offset: 1304
-    length: 35
+  - offset: 1758
+    length: 50
     placeholder_text: "...  # TODO реализовать метод clear"
     initial_state:
       length: 35
       offset: 1304
     initialized_from_dependency: false
-    selected: false
-    status: Failed
+    selected: true
+    status: Solved
     encrypted_possible_answer: '...'
-  - offset: 1420
-    length: 37
+  - offset: 1889
+    length: 56
     placeholder_text: "...  # TODO реализовать метод __len__"
     initial_state:
       length: 37
       offset: 1420
     initialized_from_dependency: false
-    selected: false
-    status: Failed
+    selected: true
+    status: Solved
     encrypted_possible_answer: '...'
   text: |
     """
@@ -199,9 +199,9 @@ files:
 - name: tests/__init__.py
   visible: false
   learner_created: false
-status: Failed
+status: Solved
 feedback:
-  message: Error
-  time: "Sat, 01 Jun 2024 15:53:08 UTC"
+  message: Congratulations!
+  time: "Wed, 05 Jun 2024 10:50:58 UTC"
 record: -1
 solution_hidden: false
