--- a/O-нотация. Простые структуры данных/Практические задания/Очередь с приоритетами/task-info.yaml
+++ b/O-нотация. Простые структуры данных/Практические задания/Очередь с приоритетами/task-info.yaml
@@ -11,7 +11,7 @@ files:
       length: 68
       offset: 258
     initialized_from_dependency: false
-    selected: false
+    selected: true
     status: Failed
     encrypted_possible_answer: |-
       self.priority_queue: dict[int, deque] = {
@@ -226,5 +226,5 @@ files:
 status: Failed
 feedback:
   message: Error
-  time: "Sat, 01 Jun 2024 14:14:28 UTC"
+  time: "Wed, 05 Jun 2024 10:59:00 UTC"
 record: -1
