--- a/Итеративные и рекурсивные алгоритмы/Самостоятельная работа/Итеративный бинарный поиск/task-info.yaml
+++ b/Итеративные и рекурсивные алгоритмы/Самостоятельная работа/Итеративный бинарный поиск/task-info.yaml
@@ -4,15 +4,15 @@ files:
   visible: true
   placeholders:
   - offset: 381
-    length: 61
+    length: 378
     placeholder_text: "...  # TODO реализовать итеративный алгоритм бинарного поис\
       ка"
     initial_state:
       length: 61
       offset: 381
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Failed
     encrypted_possible_answer: |-
       left_border = 0
           right_border = len(seq) - 1
@@ -128,5 +128,11 @@ files:
 - name: tests/__init__.py
   visible: false
   learner_created: false
-status: Unchecked
+status: Failed
+feedback:
+  message: "1 != 2 : Бинарный поиск должен возвращать индекс первой встречи искомо\
+    го элемента"
+  time: "Wed, 05 Jun 2024 13:43:30 UTC"
+  expected: 1
+  actual: 2
 record: -1
