--- a/O-нотация. Простые структуры данных/Лабораторная 1/Скобочные группы/task-info.yaml
+++ b/O-нотация. Простые структуры данных/Лабораторная 1/Скобочные группы/task-info.yaml
@@ -4,14 +4,14 @@ files:
   visible: true
   placeholders:
   - offset: 280
-    length: 192
+    length: 457
     placeholder_text: "...  # TODO реализовать проверку скобочной группы"
     initial_state:
       length: 49
       offset: 280
     initialized_from_dependency: false
     selected: true
-    status: Failed
+    status: Solved
     encrypted_possible_answer: '...'
   text: |
     def check_brackets(brackets_row: str) -> bool:
@@ -55,9 +55,9 @@ files:
 - name: tests/__init__.py
   visible: false
   learner_created: false
-status: Failed
+status: Solved
 feedback:
-  message: Incorrect
-  time: "Wed, 05 Jun 2024 09:45:50 UTC"
+  message: Congratulations!
+  time: "Fri, 07 Jun 2024 14:15:50 UTC"
 record: -1
 solution_hidden: false
