--- a/Итеративные и рекурсивные алгоритмы/Самостоятельная работа/Переворот строки/task-info.yaml
+++ b/Итеративные и рекурсивные алгоритмы/Самостоятельная работа/Переворот строки/task-info.yaml
@@ -4,14 +4,14 @@ files:
   visible: true
   placeholders:
   - offset: 72
-    length: 3
+    length: 53
     placeholder_text: '...'
     initial_state:
       length: 3
       offset: 72
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: |-
       left, right = 0, len(s) - 1
           while left < right:
@@ -57,5 +57,8 @@ files:
 - name: tests/__init__.py
   visible: false
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Fri, 07 Jun 2024 14:36:37 UTC"
 record: -1
