--- a/Итеративные и рекурсивные алгоритмы/Практические задания/Итеративный фибоначчи/task-info.yaml
+++ b/Итеративные и рекурсивные алгоритмы/Практические задания/Итеративный фибоначчи/task-info.yaml
@@ -3,15 +3,15 @@ files:
 - name: task.py
   visible: true
   placeholders:
-  - offset: 269
-    length: 57
+  - offset: 266
+    length: 597
     placeholder_text: "...  # TODO написать итеративный алгоритм чисел Фибоначчи"
     initial_state:
       length: 57
       offset: 269
     initialized_from_dependency: false
-    selected: false
-    status: Failed
+    selected: true
+    status: Solved
     encrypted_possible_answer: |-
       if n < 0:
               raise ValueError("Номер числа Фибоначчи должен быть не отрицательным числом")
@@ -65,9 +65,8 @@ files:
 - name: tests/__init__.py
   visible: false
   learner_created: false
-status: Failed
+status: Solved
 feedback:
-  message: "ValueError not raised : Что такое -35 число фибоначчи? Должна вызывать\
-    ся ошибка"
-  time: "Fri, 07 Jun 2024 14:20:25 UTC"
+  message: Congratulations!
+  time: "Sun, 09 Jun 2024 13:30:34 UTC"
 record: -1
