--- a/Итеративные и рекурсивные алгоритмы/Практические задания/Рекурсивный бинарный поиск/task-info.yaml
+++ b/Итеративные и рекурсивные алгоритмы/Практические задания/Рекурсивный бинарный поиск/task-info.yaml
@@ -4,14 +4,14 @@ files:
   visible: true
   placeholders:
   - offset: 614
-    length: 650
+    length: 1666
     placeholder_text: "...  # TODO реализовать алгоритм бинарного поиска"
     initial_state:
       length: 49
       offset: 614
     initialized_from_dependency: false
     selected: true
-    status: Failed
+    status: Solved
     encrypted_possible_answer: |-
       if right_border is None:
               right_border = len(seq) - 1
@@ -137,11 +137,8 @@ files:
 - name: binary_search.gif
   visible: true
   learner_created: false
-status: Failed
+status: Solved
 feedback:
-  message: "1 != 2 : Бинарный поиск должен возвращать индекс первой встречи искомо\
-    го элемента"
-  time: "Wed, 05 Jun 2024 13:34:52 UTC"
-  expected: 1
-  actual: 2
+  message: Congratulations!
+  time: "Sun, 09 Jun 2024 15:41:14 UTC"
 record: -1
