--- a/Итеративные и рекурсивные алгоритмы/Практические задания/Рекурсивный фибоначчи/task-info.yaml
+++ b/Итеративные и рекурсивные алгоритмы/Практические задания/Рекурсивный фибоначчи/task-info.yaml
@@ -3,15 +3,15 @@ files:
 - name: task.py
   visible: true
   placeholders:
-  - offset: 269
-    length: 44
+  - offset: 340
+    length: 481
     placeholder_text: "...  # TODO реализовать рекурсивный алгоритм"
     initial_state:
       length: 44
       offset: 269
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: |-
       if n < 0:
               raise ValueError("Номер числа Фибоначчи должен быть не отрицательным числом")
@@ -63,5 +63,8 @@ files:
 - name: img.png
   visible: true
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Sun, 09 Jun 2024 14:55:14 UTC"
 record: -1
