--- a/Динамическое программирование/Практические задания/Ракета. Самый дешевый маршрут/task-info.yaml
+++ b/Динамическое программирование/Практические задания/Ракета. Самый дешевый маршрут/task-info.yaml
@@ -3,15 +3,15 @@ files:
 - name: task.py
   visible: true
   placeholders:
-  - offset: 355
-    length: 53
+  - offset: 365
+    length: 618
     placeholder_text: "...  # TODO рассчитать таблицу стоимостей перемещений"
     initial_state:
       length: 53
       offset: 355
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: |-
       table = table.copy()
           n = len(table)
@@ -80,5 +80,8 @@ files:
 - name: img.png
   visible: true
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Sat, 22 Jun 2024 22:39:25 UTC"
 record: -1
