--- a/Сортировки/Самостоятельная работа/Пересечение двух массивов/task-info.yaml
+++ b/Сортировки/Самостоятельная работа/Пересечение двух массивов/task-info.yaml
@@ -3,15 +3,15 @@ files:
 - name: task.py
   visible: true
   placeholders:
-  - offset: 97
-    length: 3
+  - offset: 135
+    length: 50
     placeholder_text: '...'
     initial_state:
       length: 3
       offset: 97
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: |-
       set1 = set(nums1)
           set2 = set(nums2)
@@ -54,5 +54,8 @@ files:
 - name: tests/__init__.py
   visible: false
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Tue, 25 Jun 2024 21:19:29 UTC"
 record: -1
