--- a/Сортировки/Самостоятельная работа/Преобладающий элемент/task-info.yaml
+++ b/Сортировки/Самостоятельная работа/Преобладающий элемент/task-info.yaml
@@ -3,15 +3,15 @@ files:
 - name: task.py
   visible: true
   placeholders:
-  - offset: 76
-    length: 3
+  - offset: 71
+    length: 265
     placeholder_text: '...'
     initial_state:
       length: 3
       offset: 76
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: |-
       count = 0
           candidate = None
@@ -63,5 +63,8 @@ files:
 - name: tests/__init__.py
   visible: false
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Tue, 11 Jun 2024 00:02:30 UTC"
 record: -1
