--- a/Сортировки/Самостоятельная работа/Пропущенное значение/task-info.yaml
+++ b/Сортировки/Самостоятельная работа/Пропущенное значение/task-info.yaml
@@ -3,15 +3,15 @@ files:
 - name: task.py
   visible: true
   placeholders:
-  - offset: 74
-    length: 3
+  - offset: 183
+    length: 0
     placeholder_text: '...'
     initial_state:
       length: 3
       offset: 74
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: |-
       n = len(nums)
           return n * (n + 1) // 2 - sum(nums)
@@ -50,5 +50,8 @@ files:
 - name: tests/__init__.py
   visible: false
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Tue, 25 Jun 2024 22:07:47 UTC"
 record: -1
