--- a/Сортировки/Самостоятельная работа/Содержит дубликаты/task-info.yaml
+++ b/Сортировки/Самостоятельная работа/Содержит дубликаты/task-info.yaml
@@ -3,15 +3,15 @@ files:
 - name: task.py
   visible: true
   placeholders:
-  - offset: 79
-    length: 3
+  - offset: 244
+    length: 0
     placeholder_text: '...'
     initial_state:
       length: 3
       offset: 79
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: return len(nums) > len(set(nums))
   text: |
     from typing import List
@@ -54,5 +54,8 @@ files:
 - name: tests/__init__.py
   visible: false
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Tue, 25 Jun 2024 21:02:29 UTC"
 record: -1
