--- a/Сортировки/Самостоятельная работа/Сортировка цвета/task-info.yaml
+++ b/Сортировки/Самостоятельная работа/Сортировка цвета/task-info.yaml
@@ -4,14 +4,14 @@ files:
   visible: true
   placeholders:
   - offset: 152
-    length: 3
+    length: 5
     placeholder_text: '...'
     initial_state:
       length: 3
       offset: 152
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Failed
     encrypted_possible_answer: |-
       low, mid, high = 0, 0, len(nums) - 1
           while mid <= high:
@@ -62,5 +62,8 @@ files:
 - name: tests/__init__.py
   visible: false
   learner_created: false
-status: Unchecked
+status: Failed
+feedback:
+  message: Error
+  time: "Tue, 11 Jun 2024 11:22:31 UTC"
 record: -1
