--- a/Сортировки/Практические задания/Быстрая сортировка/task-info.yaml
+++ b/Сортировки/Практические задания/Быстрая сортировка/task-info.yaml
@@ -3,15 +3,15 @@ files:
 - name: task.py
   visible: true
   placeholders:
-  - offset: 495
-    length: 51
+  - offset: 492
+    length: 736
     placeholder_text: "...  # TODO реализовать алгоритм быстрой сортировки"
     initial_state:
       length: 51
       offset: 495
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: |-
       if not container:
               return container
@@ -79,5 +79,8 @@ files:
 - name: quick_sort.gif
   visible: true
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Mon, 10 Jun 2024 23:20:23 UTC"
 record: -1
